<resources>
    <string name="app_name">GOT</string>

    <string name="app_name_splash">GOT\nWesteros\nAt War</string>

    <string name="search_hint">Search by name</string>
    <string name="total_kings">Total kings</string>
    <string name="total_kings_text">Total kings : %1$s</string>
    <string name="no_network">No Internet Connection.</string>
    <string name="king_image">king</string>
    <string name="filter_by">Battle Strength</string>
    <string name="attack">attack</string>
    <string name="defend">defend</string>

    <string-array name="king_details">
        <item>Highest Rating</item>
        <item>Battles Won</item>
        <item>Battles Lost</item>
        <item>Strength</item>
        <item>Strength in Battle type</item>
    </string-array>
</resources>
