<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:background="@drawable/dialogue_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sortbby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/filter_by"
        android:textColor="@color/text_color_dark"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/attack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/attack"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/default_text_size" />

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/defend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/defend"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/default_text_size" />
</LinearLayout>