<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:titleTextColor="@android:color/white">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_margin">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_background"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawablePadding="@dimen/default_margin"
                android:gravity="center_vertical"
                android:hint="@string/search_hint"
                android:paddingBottom="@dimen/default_margin"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_button_height"
                android:paddingTop="@dimen/default_margin"
                android:textSize="@dimen/search_text_size" />

            <ImageView
                android:id="@+id/search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/default_margin"
                android:src="@android:drawable/ic_notification_clear_all"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/totalevents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_layout"
            android:padding="@dimen/default_margin"
            android:text="@string/total_kings"
            android:textColor="@color/colorPrimary" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refreshlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalevents">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:scrollbars="vertical" />
        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>
</layout>
